<resources>
    <string name="app_name">talking Button</string>
    <string name="click">Beer</string>
    <string name="map">Map</string>
    <string name="pokemon">Pokémon</string>
    <string name="quefaire">Make what you want</string>
    <string name="toast">Toast</string>
    <string name="msg">I am a toast!</string>
    <string name="city">City</string>
    <string name="search">Search</string>
    <string name="touch">Hit me</string>
    <string name="frap0">aie</string>
    <string name="frap1">stop</string>
    <string name="frap2">it is hurt</string>
    <string name="frap3">you want kill me</string>
    <string name="title_activity_pokemon">pokemon</string>
    <string name="beer">Hmm, Beers!!!</string>
    <string name="appbeer">beers</string>
    <string name="whopoke">Who is that Pokémon?</string>
    <string name="id">id between 1 and 721</string>
    <string name="disbeer">give me a beer!!!</string>
    <string name="poke">POOOKEEEMOOOON!!</string>
    <string name="voyage">We go on a trip?</string>
    <string name="voyagebyby">Good trip</string>
    <string name="dlc"> </string>
    <string name="nom">id</string>
    <string name="quit_dial">I now know your favorite color.</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="beige">Beige</string>
    <string name="black">Black</string>
    <string name="brown">Brown</string>
    <string name="golden">Golden</string>
    <string name="mauve">Mauve</string>
    <string name="navy_blue">Navy blue</string>
    <string name="pink">Pink</string>
    <string name="silver">Silver</string>
    <string name="turquoise">Turquoise</string>
    <string name="white">White</string>
    <string name="grey">Grey</string>
    <string name="fav_button">My favorite color</string>
    <string name="ok">OK</string>
    <string name="end_dl">Download done</string>
    <string name="color_hint">Enter your favorite color</string>
</resources>
