<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pokemontrue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kevin.yoapp.pokemontrue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:id="@+id/idtetx"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pokename"
        android:text=""
        android:visibility="invisible"
        android:layout_below="@+id/imagepoke"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dlc"
        android:text="@string/dlc"
        android:visibility="invisible"
        android:layout_below="@+id/pokename"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/nom"
        android:ems="10"
        android:layout_marginTop="13dp"
        android:id="@+id/aspokname"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/idtetx"/>

    <Button
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_marginTop="13dp"
        android:onClick="ask_press"
        android:layout_below="@+id/aspokname"
        android:layout_alignRight="@+id/aspokname"
        android:layout_alignEnd="@+id/aspokname"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:visibility="invisible"
        android:id="@+id/imagepoke"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
