<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kevin.yoapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/quefaire"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="btn_press"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
         android:layout_height="0dp"
        android:visibility="invisible"
        android:id="@+id/rv_biere"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonpoke" />

    <Button
        android:text="@string/touch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_marginTop="13dp"
        android:id="@+id/buttonfrap"
        android:onClick="frap_touch"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttontoast"
        android:layout_marginTop="13dp"
        android:text="@string/toast"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/buttonfrap"
        android:layout_toEndOf="@+id/buttonfrap"
        android:onClick="press_toast"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonpoke"
        android:text="pokemon"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="press_poke"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonmap"
        android:text="MAP"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/button"
        android:layout_toRightOf="@+id/buttonpoke"
        android:layout_toEndOf="@+id/buttonpoke"
        android:onClick="press_map"/>

</RelativeLayout>
